# devops-solution-product-development

./: .claudeignore  .gitignore  .plane-state.json  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.plane.yaml  plane.env.example  pyproject.toml  setup.sh
config/: aicp-board.yaml  dspd-board.yaml  fleet-board.yaml  fleet-members.yaml  fleet-roles.yaml  mission.yaml  nnrt-board.yaml
docker/: nginx.plane.conf
docs/: architecture.md  plane-setup.md  requirements.md
docs/milestones/: implementation-plan.md  plane-fleet-integration-architecture.md  plane-full-configuration.md  plane-iac-evolution.md  plane-platform-maturity.md  plane-skills-and-chains.md  plane-sync-worker.md  sprint2.md
docs/retrospectives/: sprint1.md
dspd/: __init__.py  config.py  webhooks.py
scripts/: plane-backup.sh  plane-configure.sh  plane-export-state.sh  plane-restore.sh  plane-seed-mission.sh  plane-setup-content.sh  plane-setup-labels.sh  plane-setup-members.sh  plane-setup-projects.sh  plane-setup-states.sh  plane-setup-webhooks.sh  plane-startup-verify.sh  plane-validate-api.sh  plane_export.py
tests/: conftest.py
tests/integration/: test_plane_api.py
tests/unit/: test_config.py  test_webhooks.py
